# regime-aware-transformer

./: .gitignore  LICENSE  LICENSE copy  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
configs/: default.yaml
scripts/: backtest.py  compare_models.py  prepare_data.py  train.py
src/rat/: __init__.py  config.py
src/rat/evaluation/: backtest.py  inference.py  plots.py
src/rat/models/: __init__.py  baselines.py  layers.py  rat.py
src/rat/training/: losses.py  train.py
tests/: CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml  test_backtest.py  test_config.py  test_losses.py  test_models.py  test_regime_conditioning.py
tests/scripts/: backtest.py
tests/src/rat/evaluation/: backtest.py  inference.py  plots.py
tests/src/rat/models/: layers.py
